--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule ".vim/bundle/vim-js-indent"]
 	path = .vim/bundle/vim-js-indent
 	url = git@github.com:jason0x43/vim-js-indent.git
+[submodule ".vim/bundle/tmuxline.vim"]
+	path = .vim/bundle/tmuxline.vim
+	url = git://github.com/edkolev/tmuxline.vim.git
