--- a/.gitmodules
+++ b/.gitmodules
@@ -1,45 +1,45 @@
 [submodule ".vim/bundle/vim-fugitive"]
 	path = .vim/bundle/vim-fugitive
-	url = git@github.com:tpope/vim-fugitive.git
+	url = git://github.com/tpope/vim-fugitive.git
 [submodule ".vim/bundle/nerdtree"]
 	path = .vim/bundle/nerdtree
-	url = git@github.com:scrooloose/nerdtree.git
+	url = git://github.com/scrooloose/nerdtree.git
 [submodule ".vim/bundle/molokai"]
 	path = .vim/bundle/molokai
-	url = git@github.com:tomasr/molokai.git
+	url = git://github.com/tomasr/molokai.git
 [submodule ".vim/bundle/vim-flavored-markdown"]
 	path = .vim/bundle/vim-flavored-markdown
-	url = git@github.com:jtratner/vim-flavored-markdown.git
+	url = git://github.com/jtratner/vim-flavored-markdown.git
 [submodule ".vim/bundle/supertab"]
 	path = .vim/bundle/supertab
-	url = git@github.com:ervandew/supertab.git
+	url = git://github.com/ervandew/supertab.git
 [submodule ".vim/bundle/vim-airline"]
 	path = .vim/bundle/vim-airline
-	url = git@github.com:bling/vim-airline.git
+	url = git://github.com/bling/vim-airline.git
 [submodule ".vim/bundle/vim-surround"]
 	path = .vim/bundle/vim-surround
-	url = git@github.com:tpope/vim-surround.git
+	url = git://github.com/tpope/vim-surround.git
 [submodule ".vim/bundle/ctrlp.vim"]
 	path = .vim/bundle/ctrlp.vim
-	url = git@github.com:kien/ctrlp.vim.git
+	url = git://github.com/kien/ctrlp.vim.git
 [submodule ".vim/bundle/nerdcommenter"]
 	path = .vim/bundle/nerdcommenter
-	url = git@github.com:scrooloose/nerdcommenter.git
+	url = git://github.com/scrooloose/nerdcommenter.git
 [submodule ".vim/bundle/typescript-vim"]
 	path = .vim/bundle/typescript-vim
-	url = git@github.com:leafgarland/typescript-vim.git
+	url = git://github.com/leafgarland/typescript-vim.git
 [submodule ".vim/bundle/vim-js-indent"]
 	path = .vim/bundle/vim-js-indent
-	url = git@github.com:jason0x43/vim-js-indent.git
+	url = git://github.com/jason0x43/vim-js-indent.git
 [submodule ".vim/bundle/tmuxline.vim"]
 	path = .vim/bundle/tmuxline.vim
 	url = git://github.com/edkolev/tmuxline.vim.git
 [submodule ".vim/bundle/base16-vim"]
 	path = .vim/bundle/base16-vim
-	url = git@github.com:chriskempson/base16-vim.git
+	url = git://github.com/chriskempson/base16-vim.git
 [submodule ".vim/bundle/vim-devicons"]
 	path = .vim/bundle/vim-devicons
-	url = git@github.com:ryanoasis/vim-devicons.git
+	url = git://github.com/ryanoasis/vim-devicons.git
 [submodule ".vim/bundle/vim-tmux-navigator"]
 	path = .vim/bundle/vim-tmux-navigator
-	url = git@github.com:christoomey/vim-tmux-navigator.git
+	url = git://github.com/christoomey/vim-tmux-navigator.git
