--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,6 @@
 [submodule ".vim/bundle/gulp-vim"]
 	path = .vim/bundle/gulp-vim
 	url = git://github.com/KabbAmine/gulp-vim.git
+[submodule "vim-markdown"]
+	path = .vim/bundle/vim-markdown
+	url = git://github.com/gabrielelana/vim-markdown
