--- a/.gitmodules
+++ b/.gitmodules
@@ -76,3 +76,9 @@
 [submodule ".vim/bundle/vim-repeat"]
 	path = .vim/bundle/vim-repeat
 	url = git://github.com/tpope/vim-repeat.git
+[submodule ".vim/bundle/vim-pencil"]
+	path = .vim/bundle/vim-pencil
+	url = git://github.com/reedes/vim-pencil.git
+[submodule ".vim/bundle/vim-ctrlp-autoignore"]
+	path = .vim/bundle/vim-ctrlp-autoignore
+	url = git://github.com/ludovicchabant/vim-ctrlp-autoignore.git
