--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".vim/autoload"]
 	path = .vim/autoload
 	url = git://github.com/junegunn/vim-plug.git
+[submodule ".vim/lsp/elixir-ls"]
+	path = .vim/lsp/elixir-ls
+	url = https://github.com/JakeBecker/elixir-ls
